k8s/services/exchange-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopno-payments
  labels:
    name: shopno-payments
    app.kubernetes.io/part-of: shopnoltd
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
