k8s/services/exchange-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exchange-service
  namespace: shopno-payments
  labels:
    app.kubernetes.io/name: exchange-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: exchange-service
