k8s/services/exchange-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exchange-service
  namespace: shopno-payments
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - exchange-service.shopnoltd.com
      secretName: exchange-service-tls
  rules:
    - host: exchange-service.shopnoltd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exchange-service
                port:
                  number: 80
